force-app/main/default/objects/Subscription__c/fields/AmendmentEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>AmendmentEffectiveDate__c</fullName>
    <label>Amendment Effective Date</label>
    <type>Date</type>
</CustomField>