force-app/main/default/objects/Subscription__c/fields/CancelledDate__c.field-meta.xml
<CustomField>
    <fullName>CancelledDate__c</fullName>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>