force-app/main/default/objects/Subscription__c/fields/ContractAcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>ContractAcceptanceDate__c</fullName>
    <label>Contract Acceptance Date</label>
    <type>Date</type>
</CustomField>