force-app/main/default/objects/Subscription__c/fields/ContractEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEffectiveDate__c</fullName>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>