force-app/main/default/objects/Subscription__c/fields/CurrentTerm__c.field-meta.xml
<CustomField>
    <fullName>CurrentTerm__c</fullName>
    <label>Current Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>