force-app/main/default/objects/Subscription__c/fields/CurrentTermPeriodType__c.field-meta.xml
<CustomField>
    <fullName>CurrentTermPeriodType__c</fullName>
    <label>Current Term Period Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>