force-app/main/default/objects/Subscription__c/fields/CustomerAcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerAcceptanceDate__c</fullName>
    <label>Customer Acceptance Date</label>
    <type>Date</type>
</CustomField>