force-app/main/default/objects/Subscription__c/fields/HasDifferentInvoiceOwner2__c.field-meta.xml
<CustomField>
    <fullName>HasDifferentInvoiceOwner2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Different Invoice Owner</label>
    <type>Checkbox</type>
</CustomField>