force-app/main/default/objects/Subscription__c/fields/HasDifferentInvoiceOwner__c.field-meta.xml
<CustomField>
    <fullName>HasDifferentInvoiceOwner__c</fullName>
    <formula>NOT( ISBLANK( InvoiceOwner__c ) ) &amp;&amp; InvoiceOwner__c &lt;&gt; Account__c</formula>
    <label>Has Different Invoice Owner</label>
    <type>Checkbox</type>
</CustomField>