force-app/main/default/objects/Subscription__c/fields/InvoiceOwner__c.field-meta.xml
<CustomField>
    <fullName>InvoiceOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions (Invoice Owner)</relationshipLabel>
    <relationshipName>InvOwnSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>