force-app/main/default/objects/Subscription__c/fields/InvoiceSeparately__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSeparately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Separately</label>
    <type>Checkbox</type>
</CustomField>