force-app/main/default/objects/Subscription__c/fields/IsInvoiceSeparate__c.field-meta.xml
<CustomField>
    <fullName>IsInvoiceSeparate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Invoice Separate</label>
    <type>Checkbox</type>
</CustomField>