force-app/main/default/objects/Subscription__c/fields/OriginalSubscription__c.field-meta.xml
<CustomField>
    <fullName>OriginalSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Subscriptions (Original Subscription)</relationshipLabel>
    <relationshipName>SubscriptionsOriginal</relationshipName>
    <type>Lookup</type>
</CustomField>