force-app/main/default/objects/Subscription__c/fields/PrecedingSubscription__c.field-meta.xml
<CustomField>
    <fullName>PrecedingSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preceding Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>PrecedingSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>