force-app/main/default/objects/Subscription__c/fields/PreviousSubscription__c.field-meta.xml
<CustomField>
    <fullName>PreviousSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Subscriptions (Previous Subscription)</relationshipLabel>
    <relationshipName>SubscriptionsPrevious</relationshipName>
    <type>Lookup</type>
</CustomField>