force-app/main/default/objects/Subscription__c/fields/RenewalSetting__c.field-meta.xml
<CustomField>
    <fullName>RenewalSetting__c</fullName>
    <label>Renewal Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>