force-app/main/default/objects/Subscription__c/fields/RenewalTerm__c.field-meta.xml
<CustomField>
    <fullName>RenewalTerm__c</fullName>
    <label>Renewal Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>