force-app/main/default/objects/Subscription__c/fields/RenewalTermPeriodType__c.field-meta.xml
<CustomField>
    <fullName>RenewalTermPeriodType__c</fullName>
    <label>Renewal Term Period Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>