force-app/main/default/objects/Subscription__c/fields/ServiceActivationDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceActivationDate__c</fullName>
    <label>Service Activation Date</label>
    <type>Date</type>
</CustomField>