force-app/main/default/objects/Subscription__c/fields/Subscription_Po1__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Po1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Po1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>