force-app/main/default/objects/Subscription__c/fields/SupercedingSubscription__c.field-meta.xml
<CustomField>
    <fullName>SupercedingSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superceding Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Subscriptions (Superceding Subscription)</relationshipLabel>
    <relationshipName>SupercedingSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>