force-app/main/default/objects/Subscription__c/fields/TermEndDate__c.field-meta.xml
<CustomField>
    <fullName>TermEndDate__c</fullName>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>