force-app/main/default/objects/Subscription__c/fields/TermStartDate__c.field-meta.xml
<CustomField>
    <fullName>TermStartDate__c</fullName>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>