force-app/main/default/objects/Subscription__c/fields/TermType__c.field-meta.xml
<CustomField>
    <fullName>TermType__c</fullName>
    <label>Term Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>