force-app/main/default/objects/Subscription__c/fields/TotalValue__c.field-meta.xml
<CustomField>
    <fullName>TotalValue__c</fullName>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>