force-app/main/default/objects/Subscription__c/fields/UpdatedDateZuora__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDateZuora__c</fullName>
    <label>Updated Date Zuora</label>
    <type>DateTime</type>
</CustomField>