force-app/main/default/objects/Subscription__c/fields/Version_Key__c.field-meta.xml
<CustomField>
    <fullName>Version_Key__c</fullName>
    <formula>Name  &amp; &quot;:&quot; &amp; TEXT(Version__c)</formula>
    <label>Version Key</label>
    <type>Text</type>
</CustomField>