force-app/main/default/objects/Subscription__c/fields/Version_Status__c.field-meta.xml
<CustomField>
    <fullName>Version_Status__c</fullName>
    <formula>IF( PrecedingSubscription__r.AmendmentEffectiveDate__c &gt; TODAY() , &quot;Future&quot; ,

IF( ISBLANK( SupercedingSubscription__c ) , &quot;Current&quot;, &quot;Unsure&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version Status</label>
    <type>Text</type>
</CustomField>